[package]
name = "panic-analyzer"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "an audit tool to scan your crate or workspace searching for potential panic points in your codebase"
authors = ["Yassin Eldeeb <yassineldeeb94@gmail.com>"]
repository = "https://github.com/YassinEldeeb/panic_free_analyzer"
keywords = ["rust", "panic", "inspector", "analyzer", "ci"]

[[bin]]
name = "cargo-panic-analyzer"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
serde_json = "1.0.111"
walkdir = "2.4.0"
